<resources>
    <!-- CREDENCIALES APLICATIVO -->
    <string name="app_name">Mercado Libre</string>
    <string name="copyright">Copyright © 2024 MercadoLibreClone</string>

    <!-- GLOBALS -->
    <string name="btn_arrow_back_description"> Icon arrow back </string>
    <string name="btn_cross_description"> Icon cross </string>
    <string name="btn_delete"> Eliminar </string>
    <string name="btn_save"> Guardar </string>

    <!-- MENU -->
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Cloe</string>
    <string name="tv_enter_your_account">Ingresa a tu cuenta</string>
    <string name="tv_details">Podrás ver detalles de envío y personalizar tu experiencia.</string>
    <string name="title_nav_home">Inicio</string>
    <string name="title_nav_search">Buscar</string>
    <string name="title_nav_my_shopping">Mis compras</string>
    <string name="title_nav_favorites">Favoritos</string>
    <string name="title_nav_offers">Ofertas</string>
    <string name="title_nav_history">Historial</string>
    <string name="title_nav_my_account">Mi cuenta</string>
    <string name="title_nav_categories">Categorias</string>


    <!-- LOGIN -->
    <string name="title_login">Ingresá tu teléfono, e-mail o usuario y clave</string>
    <string name="label_email">Teléfono, e-mail o usuario</string>
    <string name="label_password">Clave</string>
    <string name="btn_continue">Ingresar</string>
    <string name="btn_create_account">Crear cuenta</string>
    <string name="btn_need_help">Necesito ayuda para ingresar</string>

    <!-- MAIN -->
    <string name="tv_offers">OFERTAS IMPERDIBLES</string>

    <!-- CATEGORIES -->
    <string name="tv_vehicles">Vehicles</string>
    <string name="tv_vehicles_es">Vehículos</string>

    <string name="tv_agro">Agro</string>
    <string name="tv_agro_es">Agro</string>

    <string name="tv_food_and_beverages">Food and Beverages</string>
    <string name="tv_food_and_beverages_es">Alimentos y bebidas</string>

    <string name="tv_animals">Animals</string>
    <string name="tv_animals_es">Animales</string>

    <string name="tv_collections">Collections</string>
    <string name="tv_collections_es">Colecciones</string>

    <string name="tv_art">Art</string>
    <string name="tv_art_es">Arte</string>

    <string name="tv_beauty">Beauty</string>
    <string name="tv_beauty_es">Belleza</string>

    <string name="tv_cameras">Cameras and Accsories</string>
    <string name="tv_cameras_es">Cámaras y Accesorios</string>

    <string name="tv_cell_phones">Cell Phones</string>
    <string name="tv_cell_phones_es">Celulares y Teléfonos</string>

    <string name="tv_computers">Computers</string>
    <string name="tv_computers_es">Computación</string>

    <string name="tv_consoles_and_video_games">Consoles and Video Games</string>
    <string name="tv_consoles_and_video_games_es">Consolas y Videojuegos</string>

    <string name="tv_construction">Construction</string>
    <string name="tv_construction_es">Construcción</string>

    <string name="tv_fitness_and_sports">Fitness and Sports</string>
    <string name="tv_fitness_and_sports_es">Fitness y Deporte</string>

    <string name="tv_appliances">Appliances</string>
    <string name="tv_appliances_es">Electrodomésticos</string>

    <string name="tv_electronics">Electronics</string>
    <string name="tv_electronics_es">Electrónica</string>

    <string name="tv_tools">Tools</string>
    <string name="tv_tools_es">Herramientas</string>

    <string name="tv_home_furniture_and_garden">Home, Furniture, and Garden</string>
    <string name="tv_home_furniture_and_garden_es">Hogar, Muebles y Jardín</string>

    <string name="tv_real_estate">Real Estate</string>
    <string name="tv_real_estate_es">Inmuebles</string>

    <string name="tv_music">Music</string>
    <string name="tv_music_es">Música</string>

    <string name="tv_jewelry_and_watches">Jewelry and Watches</string>
    <string name="tv_jewelry_and_watches_es">Joyería y Relojes</string>

    <string name="tv_toys_and_games">Toys and Games</string>
    <string name="tv_toys_and_games_es">Juegos y Juguetes</string>

    <string name="tv_books">Books, Magazines and Comics </string>
    <string name="tv_books_es">Libros, Revistas y Cómics</string>

    <string name="tv_movies_and_series">Movies and Series</string>
    <string name="tv_movies_and_series_es">Películas y Series</string>

    <string name="tv_clothing_and_accessories">Clothing and Accessories</string>
    <string name="tv_clothing_and_accessories_es">Ropa y Accesorios</string>

    <string name="tv_health">Health</string>
    <string name="tv_health_es">Salud</string>

    <string name="tv_services">Services</string>
    <string name="tv_services_es">Servicios</string>

    <string name="tv_parties_and_events">Parties and Events</string>
    <string name="tv_parties_and_events_es">Fiestas y Eventos</string>

    <string name="tv_other_categories">Other Categories</string>
    <string name="tv_other_categories_es">Otras Categorías</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Product Detail -->
    <string name="iv_product_description">Image product</string>
    <string name="iv_favorite_description"> Icon favorite </string>
    <string name="btn_question">Question</string>
    <string name="tv_features">Product features</string>
    <string name="ic_door_description">Icon door</string>
    <string name="ic_engine_description">Icon engine</string>
    <string name="ic_fuel_description">Icon fuel</string>
    <string name="ic_transmission_description">Icon transmission</string>
    <string name="btn_view_features">View all features</string>
    <string name="tv_description">Description</string>
    <string name="tv_info_user">User information</string>
    <string name="tv_contact_user">User contact</string>
    <string name="tv_currency_price">U$S %.2f</string>
    <string name="tv_feature_door">Puertas:&#32;</string>
    <string name="tv_feature_motor">Motor:&#32;</string>
    <string name="tv_feature_fuel">Tipo de combustible:&#32;</string>
    <string name="tv_feature_transmission">Tipo de combustible:&#32;</string>
    <string name="tv_username">%s %s</string>

    <!-- Favorites -->
    <string name="ic_fav_description"> Icon favorite </string>
    <string name="tv_fav_empty"> Aún no tienes productos favoritos </string>
    <string name="tv_add_fav"> Agrégalos haciendo clic en el corazón de la página de producto </string>

    <!-- Search -->
    <string name="hint_search"> Buscar en Mercado Libre Clone </string>
    
    <!-- My Account -->
    <string name="btn_sell"> Vender </string>
    <string name="tv_shopping"> Compras </string>
    <string name="ic_description_bag"> Icon bag </string>
    <string name="tv_my_shopping"> Mis Compras </string>
    <string name="ic_description_star"> Icon star </string>
    <string name="tv_my_opinions"> Mis Opiniones </string>
    <string name="tv_sale"> Ventas </string>
    <string name="ic_description_post"> Icon post </string>
    <string name="tv_post"> Publicaciones </string>
    <string name="ic_description_shop"> Icon shop </string>
    <string name="tv_configuration"> Configuración </string>
    <string name="img_description_default_user"> Icon default user </string>
    <string name="tv_my_profile"> Mi perfil </string>
    <string name="ic_description_config"> Icon config </string>
    <string name="tv_settings"> Ajustes </string>
    <string name="tv_enter_mlc">Ingresar a Mercado Libre Clone</string>
    <string name="ic_description_on_off"> Icon on/off </string>

    <!-- Cart -->
    <string name="title_header_cart"> Carrito de compras </string>
    <string name="ic_description_shopping"> Icon shopping </string>
    <string name="tv_start_cart"> Empieza un carrrito de compras </string>
    <string name="tv_add_items"> Suma productos y consegui envio gratis. </string>
    <string name="btn_discover_products"> Descubrir productos </string>
    <string name="tv_products"> Products (0) </string>
    <string name="tv_shipment"> Envío </string>
    <string name="tv_shipments"> Envíos </string>
    <string name="tv_total"> Total </string>
    <string name="btn_continue_shopping"> Continuar compra </string>

</resources>