<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.myAccount.MyAccountFragment"
    android:padding="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sell"
        android:background="@drawable/bg_btn_global"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        android:text="@string/tv_shopping"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:src="@drawable/ic_bag"
            android:background="@drawable/bg_icon"
            android:contentDescription="@string/ic_description_bag"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_my_shopping"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:src="@drawable/ic_star"
            android:background="@drawable/bg_icon"
            android:contentDescription="@string/ic_description_star"
            android:padding="11dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_my_opinions"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        android:text="@string/tv_sale"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:background="@drawable/bg_icon"
            android:padding="11dp"
            android:src="@drawable/ic_post"
            android:contentDescription="@string/ic_description_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_post"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:background="@drawable/bg_icon"
            android:padding="11dp"
            android:src="@drawable/ic_shop"
            android:contentDescription="@string/ic_description_shop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/btn_sell" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        android:text="@string/tv_configuration"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:src="@drawable/img_default_user"
            android:contentDescription="@string/img_description_default_user"
            android:background="@drawable/bg_icon"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_my_profile"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp" />

    </LinearLayout>



    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:src="@drawable/ic_config"
            android:contentDescription="@string/ic_description_config"
            android:background="@drawable/bg_icon"
            android:padding="11dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_settings"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:src="@drawable/img_default_user"
            android:contentDescription="@string/ic_description_config"
            android:background="@drawable/bg_icon"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivUser" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivUser" />

        <TextView
            android:id="@+id/tvEnterMLC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tv_enter_mlc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivUser" />

        <ImageView
            android:id="@+id/ivOnOff"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:src="@drawable/ic_on_off"
            android:contentDescription="@string/ic_description_on_off"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>