<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.globals.ProductDetail.ProductDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300sp" >

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:paddingVertical="10dp"
                android:contentDescription="@string/iv_product_description" />

            <ImageButton
                android:id="@+id/btnAddFavorite"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_alignTop="@id/ivProduct"
                android:layout_alignEnd="@id/ivProduct"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_favorites"
                android:background="@drawable/bg_circle_img"
                android:contentDescription="@string/iv_favorite_description" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textStyle="bold"
            android:textSize="27sp" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_question"
            style="@style/buttonStyle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/tv_features"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_icon"
                android:padding="5dp"
                android:src="@drawable/ic_door_car"
                android:contentDescription="@string/ic_door_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_feature_door" />

            <TextView
                android:id="@+id/tvDoors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_icon"
                android:padding="4dp"
                android:src="@drawable/ic_engine"
                android:contentDescription="@string/ic_engine_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_feature_motor" />

            <TextView
                android:id="@+id/tvMotor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_icon"
                android:padding="6dp"
                android:src="@drawable/ic_fuel"
                android:contentDescription="@string/ic_fuel_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_feature_fuel" />

            <TextView
                android:id="@+id/tvFuelType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_icon"
                android:padding="5dp"
                android:src="@drawable/ic_transmission"
                android:contentDescription="@string/ic_transmission_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_feature_transmission" />

            <TextView
                android:id="@+id/tvTransmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btn_view_features"
            android:textColor="@color/blue"
            android:background="@drawable/bg_btn_transparent"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_description"
            android:textSize="19sp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_info_user"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/tv_contact_user" />
        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>